--- a/index.html
+++ b/index.html
@@ -80,39 +80,97 @@
     a:hover {
       color: #d6e7ff;
     }
+      /* HEADER IMPROVEMENTS */
+    .header-inner {
+      max-width: 1200px;
+      margin: auto;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    .title {
+      font-size: 2rem;
+      font-weight: 600;
+      color: #dce9ff;
+      text-shadow: 0 0 8px rgba(100,160,255,0.5);
+    }
+    #search {
+      padding: 10px 15px;
+      font-size: 1rem;
+      border-radius: 10px;
+      border: 1px solid rgba(255,255,255,0.25);
+      background: rgba(20,40,80,0.45);
+      color: #e9f3ff;
+      backdrop-filter: blur(10px);
+      outline: none;
+      box-shadow: inset 0 2px 4px rgba(0,0,0,0.4);
+      transition: 0.2s ease;
+    }
+    #search:focus {
+      background: rgba(50,80,140,0.55);
+      box-shadow: inset 0 2px 6px rgba(0,0,0,0.6), 0 0 10px rgba(120,160,255,0.4);
+    }
   </style>
 </head>
 <body>
-<header>The Alpine Bay</header>
-<div class="container" id="games"></div>
+<header>
+  <div class="header-inner">
+    <div class="title">The Alpine Bay</div>
+    <input type="text" id="search" placeholder="Search games..." />
+  </div>
+</header>
+<div class="container">
+  <input type="text" id="search" placeholder="Search games..." />
+  <div id="games"></div>
+</div>
 <script>
-fetch('/mnt/data/games.json')
+fetch("games.json")
   .then(r => r.json())
   .then(data => {
     const container = document.getElementById('games');
-    data.forEach(game => {
-      const card = document.createElement('div');
-      card.className = 'game-card';
+    const const search = document.getElementById('search');('search');
 
-      card.innerHTML = `
-        <h3>${game.name}</h3>
-        <p>${game.description}</p>
-      `;
+    function render(list) {
+      container.innerHTML = '';
+      list.forEach(game => {
+        const card = document.createElement('div');
+        card.className = 'game-card';
 
-      game.versions.forEach(v => {
-        const ver = document.createElement('div');
-        ver.className = 'version';
-        ver.innerHTML = `
-          <strong>${v.platform}</strong><br>
-          <a href="${v.url}">Download</a><br>
-          <small>Tags: ${v.tags.join(', ')}</small>
+        card.innerHTML = `
+          <h3>${game.name}</h3>
+          <p>${game.description}</p>
         `;
-        card.appendChild(ver);
-      });
 
-      container.appendChild(card);
+        game.versions.forEach(v => {
+          const ver = document.createElement('div');
+          ver.className = 'version';
+          ver.innerHTML = `
+            <strong>${v.platform}</strong><br>
+            <a href="${v.url}">Download</a><br>
+            <small>Tags: ${v.tags.join(', ')}</small>
+          `;
+          card.appendChild(ver);
+        });
+
+        container.appendChild(card);
+      });
+    }
+
+    render(data);
+
+    search.addEventListener('input', () => {
+      const text = search.value.toLowerCase();
+      const filtered = data.filter(g => 
+        g.name.toLowerCase().includes(text) ||
+        g.slug.toLowerCase().includes(text) ||
+        g.description.toLowerCase().includes(text)
+      );
+      render(filtered);
+    });
+  });(card);
     });
   });
 </script>
 </body>
 </html>
+
