--- a/index.html
+++ b/index.html
@@ -61,18 +61,19 @@
       background: 
         repeating-linear-gradient(
           0deg,
-          rgba(25,45,75,0.03) 0px,
-          rgba(25,45,75,0.03) 1px,
+          rgba(35,65,105,0.15) 0px,
+          rgba(35,65,105,0.15) 1px,
           transparent 1px,
-          transparent 2px
+          transparent 3px
         ),
         repeating-linear-gradient(
           90deg,
-          rgba(25,45,75,0.03) 0px,
-          rgba(25,45,75,0.03) 1px,
+          rgba(35,65,105,0.15) 0px,
+          rgba(35,65,105,0.15) 1px,
           transparent 1px,
-          transparent 2px
+          transparent 3px
         ),
+        radial-gradient(circle at 50% 0%, rgba(60,100,160,0.4), transparent 70%),
         linear-gradient(180deg, 
           rgba(45,85,140,0.95) 0%, 
           rgba(30,65,115,0.97) 30%,
@@ -85,6 +86,19 @@
         inset 0 2px 4px rgba(255,255,255,0.15),
         inset 0 -2px 4px rgba(0,0,0,0.4);
       position: relative;
+    }
+
+    header::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: 
+        radial-gradient(ellipse at 30% 20%, rgba(255,255,255,0.12), transparent 40%),
+        radial-gradient(ellipse at 70% 80%, rgba(0,0,0,0.15), transparent 40%);
+      pointer-events: none;
     }
 
     header::before {
@@ -129,19 +143,18 @@
     .controls {
       background: 
         repeating-linear-gradient(
-          45deg,
-          rgba(10,20,40,0.4) 0px,
-          rgba(10,20,40,0.4) 1px,
+          30deg,
+          transparent 0px,
           transparent 1px,
-          transparent 3px
+          rgba(255,255,255,0.02) 1px,
+          rgba(255,255,255,0.02) 2px,
+          transparent 2px,
+          transparent 3px,
+          rgba(0,0,0,0.03) 3px,
+          rgba(0,0,0,0.03) 4px
         ),
-        repeating-linear-gradient(
-          -45deg,
-          rgba(10,20,40,0.4) 0px,
-          rgba(10,20,40,0.4) 1px,
-          transparent 1px,
-          transparent 3px
-        ),
+        radial-gradient(circle at 20% 30%, rgba(70,120,180,0.2), transparent 60%),
+        radial-gradient(circle at 80% 70%, rgba(30,50,90,0.3), transparent 60%),
         linear-gradient(180deg, 
           rgba(55,95,150,0.9) 0%,
           rgba(40,75,125,0.92) 30%,
@@ -157,6 +170,20 @@
         inset 0 2px 6px rgba(255,255,255,0.2),
         inset 0 -2px 4px rgba(0,0,0,0.3);
       position: relative;
+    }
+
+    .controls::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: 
+        linear-gradient(135deg, rgba(255,255,255,0.08) 0%, transparent 30%),
+        linear-gradient(-135deg, rgba(0,0,0,0.1) 0%, transparent 30%);
+      border-radius: 20px;
+      pointer-events: none;
     }
 
     .controls::before {
@@ -176,17 +203,22 @@
       border-radius: 14px;
       border: 2px solid rgba(20,40,70,0.8);
       background: 
-        linear-gradient(180deg, 
-          rgba(12,25,45,0.98) 0%, 
-          rgba(8,18,35,0.99) 50%,
-          rgba(10,20,38,1) 100%);
+        repeating-linear-gradient(
+          0deg,
+          rgba(8,15,28,1) 0px,
+          rgba(8,15,28,1) 2px,
+          rgba(10,18,32,0.98) 2px,
+          rgba(10,18,32,0.98) 4px
+        ),
+        radial-gradient(ellipse at center, rgba(15,28,48,0.9), rgba(8,15,28,1));
       color: #e8f4ff;
       width:100%;
       font-size: 16px;
       margin-bottom: 22px;
       box-shadow: 
-        inset 0 3px 10px rgba(0,0,0,0.7),
-        inset 0 1px 2px rgba(0,0,0,0.5),
+        inset 0 4px 12px rgba(0,0,0,0.8),
+        inset 0 2px 4px rgba(0,0,0,0.6),
+        inset 0 -1px 0 rgba(255,255,255,0.03),
         0 1px 0 rgba(255,255,255,0.15);
       position: relative;
     }
@@ -297,19 +329,21 @@
     .series-section {
       background: 
         repeating-linear-gradient(
-          90deg,
-          rgba(255,255,255,0.015) 0px,
-          rgba(255,255,255,0.015) 1px,
-          transparent 1px,
-          transparent 4px
+          45deg,
+          rgba(255,255,255,0.008) 0px,
+          rgba(255,255,255,0.008) 3px,
+          transparent 3px,
+          transparent 6px
         ),
         repeating-linear-gradient(
-          0deg,
-          rgba(0,0,0,0.08) 0px,
-          rgba(0,0,0,0.08) 1px,
-          transparent 1px,
-          transparent 4px
+          -45deg,
+          rgba(0,0,0,0.04) 0px,
+          rgba(0,0,0,0.04) 3px,
+          transparent 3px,
+          transparent 6px
         ),
+        radial-gradient(ellipse at 10% 20%, rgba(50,90,140,0.15), transparent 70%),
+        radial-gradient(ellipse at 90% 80%, rgba(20,40,75,0.2), transparent 70%),
         linear-gradient(180deg, 
           rgba(45,80,130,0.85) 0%,
           rgba(35,65,110,0.88) 30%,
@@ -325,6 +359,20 @@
         inset 0 2px 6px rgba(255,255,255,0.2),
         inset 0 -2px 4px rgba(0,0,0,0.3);
       position: relative;
+    }
+
+    .series-section::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: 
+        radial-gradient(circle at 25% 25%, rgba(255,255,255,0.06), transparent 50%),
+        radial-gradient(circle at 75% 75%, rgba(0,0,0,0.08), transparent 50%);
+      border-radius: 20px;
+      pointer-events: none;
     }
 
     .series-section::before {
@@ -359,15 +407,15 @@
 
     .series-card {
       background: 
-        radial-gradient(ellipse at top left, rgba(255,255,255,0.03), transparent 50%),
-        radial-gradient(ellipse at bottom right, rgba(0,0,0,0.15), transparent 50%),
         repeating-linear-gradient(
-          120deg,
-          transparent 0px,
-          transparent 2px,
-          rgba(255,255,255,0.01) 2px,
-          rgba(255,255,255,0.01) 4px
+          90deg,
+          rgba(255,255,255,0.015) 0px,
+          rgba(255,255,255,0.015) 2px,
+          rgba(0,0,0,0.025) 2px,
+          rgba(0,0,0,0.025) 4px
         ),
+        radial-gradient(ellipse at 15% 25%, rgba(70,120,180,0.12), transparent 50%),
+        radial-gradient(ellipse at 85% 75%, rgba(20,40,80,0.2), transparent 50%),
         linear-gradient(180deg, 
           rgba(50,90,145,0.85) 0%,
           rgba(38,72,120,0.88) 30%,
@@ -385,6 +433,22 @@
       transition: all 0.3s;
       position: relative;
       cursor: pointer;
+    }
+
+    .series-card::after {
+      content: '';
+      position: absolute;
+      top: 50%;
+      left: 0;
+      right: 0;
+      height: 1px;
+      background: linear-gradient(90deg, 
+        transparent,
+        rgba(255,255,255,0.08) 20%,
+        rgba(255,255,255,0.08) 80%,
+        transparent
+      );
+      pointer-events: none;
     }
 
     .series-card::before {
@@ -434,17 +498,19 @@
       font-weight: 600;
       background: 
         repeating-linear-gradient(
-          45deg,
-          rgba(10,20,35,0.6) 0px,
-          rgba(10,20,35,0.6) 2px,
-          rgba(15,25,40,0.6) 2px,
-          rgba(15,25,40,0.6) 4px
-        );
+          90deg,
+          rgba(8,15,28,0.7) 0px,
+          rgba(8,15,28,0.7) 1px,
+          rgba(12,20,35,0.65) 1px,
+          rgba(12,20,35,0.65) 2px
+        ),
+        radial-gradient(circle at 50% 50%, rgba(30,50,85,0.3), rgba(10,20,35,0.7));
       padding: 5px 12px;
       border-radius: 20px;
       border: 1px solid rgba(100,160,230,0.3);
       box-shadow: 
-        inset 0 2px 4px rgba(0,0,0,0.5),
+        inset 0 3px 6px rgba(0,0,0,0.6),
+        inset 0 -1px 0 rgba(255,255,255,0.05),
         0 1px 0 rgba(255,255,255,0.1);
     }
 
@@ -475,12 +541,13 @@
     .game-item {
       background: 
         repeating-linear-gradient(
-          90deg,
-          rgba(255,255,255,0.015) 0px,
-          rgba(255,255,255,0.015) 1px,
-          transparent 1px,
-          transparent 3px
+          180deg,
+          rgba(255,255,255,0.008) 0px,
+          rgba(255,255,255,0.008) 1px,
+          rgba(0,0,0,0.015) 1px,
+          rgba(0,0,0,0.015) 2px
         ),
+        radial-gradient(circle at 40% 40%, rgba(60,100,150,0.08), transparent 70%),
         linear-gradient(180deg, 
           rgba(40,75,125,0.7) 0%,
           rgba(30,60,100,0.75) 50%,
@@ -496,6 +563,22 @@
       cursor: pointer;
       transition: all 0.25s;
       position: relative;
+    }
+
+    .game-item::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 4px;
+      height: 100%;
+      background: linear-gradient(180deg, 
+        rgba(100,160,230,0.4),
+        rgba(60,120,190,0.3),
+        rgba(40,80,140,0.2)
+      );
+      border-radius: 14px 0 0 14px;
+      pointer-events: none;
     }
 
     .game-item::before {
@@ -565,14 +648,15 @@
 
     .game-card {
       background: 
-        radial-gradient(circle at 30% 20%, rgba(255,255,255,0.04), transparent 40%),
         repeating-linear-gradient(
-          135deg,
-          rgba(0,0,0,0.02) 0px,
-          rgba(0,0,0,0.02) 2px,
-          transparent 2px,
-          transparent 4px
+          -60deg,
+          transparent 0px,
+          transparent 4px,
+          rgba(255,255,255,0.012) 4px,
+          rgba(255,255,255,0.012) 8px
         ),
+        radial-gradient(circle at 70% 30%, rgba(80,130,190,0.1), transparent 60%),
+        radial-gradient(circle at 30% 70%, rgba(20,40,75,0.15), transparent 60%),
         linear-gradient(180deg, 
           rgba(50,90,145,0.85) 0%,
           rgba(38,72,120,0.88) 30%,
@@ -589,6 +673,20 @@
         inset 0 -2px 4px rgba(0,0,0,0.3);
       transition: all 0.3s;
       position: relative;
+    }
+
+    .game-card::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: 
+        linear-gradient(125deg, rgba(255,255,255,0.04) 0%, transparent 40%),
+        linear-gradient(-125deg, rgba(0,0,0,0.06) 0%, transparent 40%);
+      border-radius: 18px;
+      pointer-events: none;
     }
 
     .game-card::before {
@@ -646,12 +744,17 @@
     .version {
       background: 
         repeating-linear-gradient(
-          90deg,
-          rgba(255,255,255,0.02) 0px,
-          rgba(255,255,255,0.02) 1px,
-          rgba(0,0,0,0.03) 1px,
-          rgba(0,0,0,0.03) 2px
+          45deg,
+          rgba(255,255,255,0.012) 0px,
+          rgba(255,255,255,0.012) 2px,
+          transparent 2px,
+          transparent 4px,
+          rgba(0,0,0,0.02) 4px,
+          rgba(0,0,0,0.02) 6px,
+          transparent 6px,
+          transparent 8px
         ),
+        radial-gradient(ellipse at center, rgba(70,115,175,0.1), transparent 80%),
         linear-gradient(180deg, 
           rgba(60,105,165,0.9) 0%,
           rgba(48,88,140,0.92) 30%,
@@ -667,6 +770,22 @@
         inset 0 -2px 3px rgba(0,0,0,0.25);
       transition: all 0.25s;
       position: relative;
+      overflow: hidden;
+    }
+
+    .version::after {
+      content: '';
+      position: absolute;
+      top: -50%;
+      right: -50%;
+      width: 200%;
+      height: 200%;
+      background: radial-gradient(
+        circle at center,
+        rgba(255,255,255,0.08) 0%,
+        transparent 50%
+      );
+      pointer-events: none;
     }
 
     .version::before {
