--- a/index.html
+++ b/index.html
@@ -915,26 +915,45 @@
   }
 
   function seriesKey(name){
-    // Extract series name by removing numbers, editions, and common suffixes
-    let series = name
-      .replace(/\b\d+(\.\d+)?[a-z]?\b/gi, '') // Remove version numbers
-      .replace(/\b(edition|remastered|definitive|collection|hd|remake|redux|complete|ultimate|deluxe|premium|gold)\b/gi, '')
-      .replace(/[:\-–—]/g, '') // Remove separators
-      .replace(/\(.*?\)/g, '') // Remove parentheses content
-      .trim()
-      .toLowerCase();
+  let clean = name
+    // Remove common edition/version suffixes
+    .replace(/\b(edition|remastered|definitive|collection|hd|remake|redux|complete|ultimate|deluxe|premium|gold|black|limited|presents|airborne)\b/gi, '')
+    // Remove parentheses and their content
+    .replace(/\([^)]*\)/g, '')
+    // Remove version numbers and years at the end (but keep them in the middle)
+    .replace(/\s+(v?\d+(\.\d+)?[a-z]?|20\d{2}|\d{4})$/gi, '')
+    // Remove common separators
+    .replace(/[:\-–—]/g, ' ')
+    .trim()
+    .toLowerCase();
+  
+  // Remove trailing numbers with optional subtitle patterns
+  // e.g., "Game 2 Subtitle" -> "Game", "Game IV" -> "Game"
+  clean = clean
+    .replace(/\s+\b(i{1,3}|iv|v|vi{1,3}|ix|x|xi{1,3})\b.*$/i, '') // Roman numerals
+    .replace(/\s+\d+(\.\d+)?[a-z]?\b.*$/i, ''); // Regular numbers
+  
+  // Remove single-word subtitles after the main title
+  // e.g., "Need for Speed Prostreet" -> "Need for Speed"
+  const words = clean.split(/\s+/);
+  if (words.length > 2) {
+    const lastWord = words[words.length - 1];
+    const commonSubtitles = ['prostreet', 'underground', 'payback', 'heat', 'rivals', 'carbon', 
+                             'undercover', 'shift', 'run', 'unbound', 'adrenaline', 'airborne',
+                             'brotherhood', 'revelations', 'origins', 'odyssey', 'valhalla', 
+                             'mirage', 'syndicate', 'unity', 'rogue', 'ghosts', 'vanguard',
+                             'warzone', 'infinite', 'warfare', 'cold', 'war', 'blackflag',
+                             'revengeance', 'rising', 'unleashed', 'apex', 'delta', 'chronicles',
+                             'trilogy', 'spec', 'competizione', 'evo'];
     
-    // Handle special cases for better grouping
-    if (series.includes('forza horizon')) return 'forza horizon';
-    if (series.includes('forza motorsport')) return 'forza motorsport';
-    if (series.includes('gran turismo')) return 'gran turismo';
-    if (series.includes('need for speed') || series.includes('nfs')) return 'need for speed';
-    if (series.includes('call of duty') || series.includes('cod')) return 'call of duty';
-    if (series.includes('asphalt')) return 'asphalt';
-    if (series.includes('assetto corsa')) return 'assetto corsa';
-    
-    return series || 'other';
+    if (commonSubtitles.includes(lastWord)) {
+      words.pop();
+      clean = words.join(' ');
+    }
   }
+  
+  return clean.trim() || 'other';
+}
 
   function render(list){
     container.innerHTML = '';
