--- a/index.html
+++ b/index.html
@@ -913,8 +913,7 @@
   function showMessage(msg){
     container.innerHTML = `<div class="no-results">${msg}</div>`;
   }
-
-  function seriesKey(name){
+function seriesKey(name){
   let clean = name
     // Remove common edition/version suffixes
     .replace(/\b(edition|remastered|definitive|collection|hd|remake|redux|complete|ultimate|deluxe|premium|gold|black|limited|presents|airborne)\b/gi, '')
@@ -928,13 +927,11 @@
     .toLowerCase();
   
   // Remove trailing numbers with optional subtitle patterns
-  // e.g., "Game 2 Subtitle" -> "Game", "Game IV" -> "Game"
   clean = clean
     .replace(/\s+\b(i{1,3}|iv|v|vi{1,3}|ix|x|xi{1,3})\b.*$/i, '') // Roman numerals
     .replace(/\s+\d+(\.\d+)?[a-z]?\b.*$/i, ''); // Regular numbers
   
   // Remove single-word subtitles after the main title
-  // e.g., "Need for Speed Prostreet" -> "Need for Speed"
   const words = clean.split(/\s+/);
   if (words.length > 2) {
     const lastWord = words[words.length - 1];
@@ -944,12 +941,19 @@
                              'mirage', 'syndicate', 'unity', 'rogue', 'ghosts', 'vanguard',
                              'warzone', 'infinite', 'warfare', 'cold', 'war', 'blackflag',
                              'revengeance', 'rising', 'unleashed', 'apex', 'delta', 'chronicles',
-                             'trilogy', 'spec', 'competizione', 'evo'];
+                             'trilogy', 'spec', 'competizione', 'evo', 'sa', 'iv', 'v'];
     
     if (commonSubtitles.includes(lastWord)) {
       words.pop();
       clean = words.join(' ');
     }
+  }
+  
+  // If still multi-word after cleanup, take first 2-3 words as the series base
+  const finalWords = clean.split(/\s+/);
+  if (finalWords.length > 3) {
+    // For longer titles, take first 2-3 words
+    clean = finalWords.slice(0, Math.min(3, finalWords.length)).join(' ');
   }
   
   return clean.trim() || 'other';
